fixed gap

--- a/public/index.css
+++ b/public/index.css
@@ -13,7 +13,7 @@
 }
 
 .headline {
-  font-size: 70px;
+  font-size: 90px;
 }
 
 .subheadline {
